--- a/templates/login/login.twig
+++ b/templates/login/login.twig
@@ -7,17 +7,20 @@
 </head>
 <body>
 <h2>Connexion</h2>
-<form action="login" method="post">
-    <label for="firstname">Prénom:</label>
-    <input type="text" id="firstname" name="firstname" required><br>
+{% if message is defined %}
+    <p>{{ message }}</p>
+{% endif %}
+<form action="{{ path('login') }}" method="post">
 
-    <label for="lastname">Nom de famille:</label>
-    <input type="text" id="lastname" name="lastname" required><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br>
+
 
     <label for="password">Mot de passe:</label>
     <input type="password" id="password" name="password" required><br>
 
     <input type="submit" value="Se connecter">
 </form>
+<p>Pas encore inscrit ? <a href="{{ path('register') }}">S'inscrire</a></p>
 </body>
 </html>
