--- a/templates/register/register.twig
+++ b/templates/register/register.twig
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h2>Inscription</h2>
-    <form action="/register" method="post">
+    {% if message is defined %}
+        <p>{{ message }}</p>
+    {% endif %}
+    <form action="{{ path('register') }}" method="post">
         <label for="firstname">Prénom:</label>
         <input type="text" id="firstname" name="firstname" required><br>
 
@@ -22,7 +25,7 @@
 
         <input type="submit" value="S'inscrire">
     </form>
-    <p>Déjà inscrit ? <a href="login.php">Se connecter</a></p> <!-- Ajout d'un lien vers la page de connexion -->
+    <p>Déjà inscrit ? <a href="{{ path('login') }}">Se connecter</a></p>
 
 </body>
 </html>
