--- a/templates/login/login.twig
+++ b/templates/login/login.twig
@@ -1,26 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion</title>
-</head>
-<body>
-<h2>Connexion</h2>
-{% if message is defined %}
-    <p>{{ message }}</p>
-{% endif %}
-<form action="{{ path('login') }}" method="post">
+{% extends 'base.twig' %}
+{% block title %}Connexion{% endblock %}
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
+{% block body %}
+
+    <div class="formulaire">
+        <h3>Connexion</h3>
+        {% if message is defined %}
+            <p>{{ message }}</p>
+        {% endif %}
+        <div class="container py-5 main">
+            <div class="row">
+                <div class="col-md-12">
+                    <form action="{{ path('login') }}" method="post">
+                        <div class="form-group row">
+
+                            <div class="col-sm-12">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="email"
+                                       required><br>
+                            </div>
+                            <div class="col-sm-12">
+                                <input type="password" class="form-control" id="password" name="password"
+                                       placeholder="Mot de passe" required/><br>
+                            </div>
+                        </div>
+                        <input type="submit" class="btn btn-primary px-4" value="Se connecter"/>
+
+                    </form>
+                    <p class="m-3">Pas encore inscrit ? <a href="{{ path('register') }}">S'inscrire</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <label for="password">Mot de passe:</label>
-    <input type="password" id="password" name="password" required><br>
-
-    <input type="submit" value="Se connecter">
-</form>
-<p>Pas encore inscrit ? <a href="{{ path('register') }}">S'inscrire</a></p>
-</body>
-</html>
+{% endblock %}
