--- a/templates/base.twig
+++ b/templates/base.twig
@@ -16,6 +16,21 @@
         <link rel="stylesheet" href="{{ path('Inc/clickaholic-master/css/main.css')}}">
         <style>{% include 'Inc/clickaholic-master/css/animate.css' %}</style>
         <style>{% include 'Inc/clickaholic-master/css/main.css' %}</style>
+        <style>
+            .social-icons {
+                display: inline-block;
+                padding: 0 10px;
+                color: #8d8d8d;
+                font-size: 28px;
+            }
+
+            .footer {
+                color: #8d8d8d;
+                padding: 20px 0;
+                background-color: #f8f9fa;
+                margin-top: 30px;
+            }
+        </style>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -23,6 +38,23 @@
         <div class="container">
         {% block body %}{% endblock %}
         </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <p>
+                            Suivez-moi sur :
+                            <a href="https://www.linkedin.com/in/félix-gomez-1a0a8a22b/" target="_blank" class="social-icons">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            </a>
+                            <a href="https://github.com/dermels" target="_blank" class="social-icons">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
